# wily

./: .exclude  .gitignore  .wily.prcs_aux  INSTALL  Makefile.in  README  acconfig.h  aclocal.m4  config.h.in  configure  configure.in  wily.prj
Doc/: AcmeVsWily.html  C.html  Credits  FAQ.html  FAQ.txt  LSM  README  TODO  Tcl.html  changes.txt  credits.html  demo.utf  download.html  fonts  hack.html  idioms.html  index.html  intro.html  mailout  mouse  one.html  onepage.html  perl.txt  python.html  pythonpaper.html  user.html  winmanager.html
include/: Makelib  frame.h  libc.h  libg.h  msg.h  u.h
libXg/: Gwin.h  GwinP.h  Makefile  Makefile.in  arc.c  arith.c  balloc.c  bitblt.c  bitbltclip.c  border.c  bscreenrect.c  circle.c  clipline.c  clipr.c  copymasked.c  cursorset.c  cursorswitch.c  disc.c  ellipse.c  font.c  gcs.c  getrect.c  gwin.c  latin1.c  ldconvert.c  libgint.h  menuhit.c  mkfont.c  point.c  polysegment.c  rdbitmap.c  rdbitmapfile.c  rdfontfile.c  rectclip.c  rune.c  segment.c  string.c  strwidth.c  test.c  texture.c  (+3 more)
libframe/: Makefile  Makefile.in  frbox.c  frdelete.c  frdraw.c  frinit.c  frinsert.c  frptofchar.c  frselect.c  frstr.c  frutil.c  misc.c
libmsg/: Makefile  Makefile.in  connect.c  msg.c  rpc.c  util.c
misc/: README  Wily.ad  prop.9.font  wily.xpm  wily2.xpm
tools/: README
tools/win/: Makefile  Makefile.in  Man.1  Man.rc  README  Tag.1  Tag.rc  config.cache  config.status  configure  configure.in  mktags.1  mktags.rc  wgoto.1  wgoto.c  win.1  win.c  wreplace.1  wreplace.c
wily/: .wily.prcs_aux  Makefile  Makefile.in  NOTES  col.c  (+54 more)
(+152 files in other folders)
