dnl Process this file with autoconf to produce a configure script.
AC_INIT(wily/wily.c)
AC_CONFIG_HEADER(config.h)

dnl Checks for programs.
AC_PROG_INSTALL
AC_PROG_CC
AC_PROG_LN_S
AC_PROG_RANLIB

AC_ISC_POSIX
AC_PATH_XTRA

dnl Checks for libraries.
AC_CHECK_LIB(m, sin)
AC_CHECK_LIB(nsl, gethostent)
AC_CHECK_LIB(socket, connect)

dnl Checks for header files.
AC_HEADER_DIRENT
AC_HEADER_STDC
AC_HEADER_SYS_WAIT
AC_CHECK_HEADERS(fcntl.h limits.h malloc.h sys/time.h unistd.h sys/select.h stdarg.h stdlib.h)

dnl Checks for typedefs, structures, and compiler characteristics.
AC_C_CONST
AC_TYPE_SIZE_T
AC_HEADER_TIME
AC_CHECK_HAVE_TYPE(ulong)
AC_CHECK_HAVE_TYPE(ushort)
AC_CHECK_HAVE_TYPE(uint)
AC_CHECK_HAVE_TYPE(uchar)
AC_CHECK_HAVE_TYPE(caddr_t)

dnl Checks for library functions.
AC_TYPE_SIGNAL
AC_FUNC_VPRINTF
AC_CHECK_FUNCS(strerror memmove remove)

AC_OUTPUT(Makefile wily/Makefile libXg/Makefile libframe/Makefile libmsg/Makefile)
